--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,7 @@ footer .copyright {
     height: 100px;
     background-color: rgb(44,62,80);
 }
+
+footer .copyright span {
+    line-height: 100px;
+}
